--- a/index.html
+++ b/index.html
@@ -6,16 +6,24 @@
     <title>Document</title>
 </head>
 <body>
-   <h1>Javascript is love</h1>
-   <script>
-    const userInput = prompt("Enter your name");
-    document.write(`Good morning ${name}`);
-    const fullname="Akanksha Ashok Yewale";
-    const Email="yewaleaakanksha@gmail.com";
-    const weight=55
-    const greeting= `student detail ${fullname} ${Email} ${55}`;
-    console.log(greeting);
+    <script>
+        const username = prompt("Enter your name");
+        console.log("good morning Akanksha");
 
-   </script> 
+        let name = "Akanksha Ashok Yewale";
+        var nametype = typeof name;
+        let age = "20"
+        var agetype = typeof age;
+        const weight = "55";
+        var weighttype = typeof weight;
+        var email = "yewaleaakansha@gmail.com";
+        var emailtype=typeof email;
+        console.log("name:",name);
+        console.log("age:",age);
+        console.log("weight:",weight);
+        console.log("email:",email);
+
+    </script>
+    <h1>Javascript Is love </h1>
 </body>
 </html>
