--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
         console.log("age:",age);
         console.log("weight:",weight);
         console.log("email:",email);
-
+    </script>
+    <script>
+        var a = true;
+        console.log("The datatype of A is :-" + typeof a);
     </script>
     <h1>Javascript Is love </h1>
 </body>
